Center alignment of clock hands fixed

--- a/clock.css
+++ b/clock.css
@@ -24,8 +24,8 @@
 #hour {
     height: 22%;
     width: 1.5%;
-    top: 29%;
-    left: 49.5%;
+    top: 28%;
+    left: 49.2%;
     opacity: 0.8;
     transform-origin: bottom;
     /* display: none; */
@@ -35,7 +35,7 @@
     height: 26%;
     width: 1%;
     top: 25%;
-    left: 49.5%;
+    left: 49.7%;
     opacity: 0.8;
     transform-origin: bottom;
     /* display: none; */
